@@ -1,3 +1,13 @@
+2007-03-25  Inge Wallin  <ingwa@c83-252-238-97.bredband.comhem.se>
+
+	Qt3 -> Qt4: Remove all remaining Q3GroupBox:
+	* dialogs/KCConfigSubtypePage.cc (KChartBarSubTypeChartPage),
+	(KChartLineSubTypeChartPage) 
+	(KChartAreaSubTypeChartPage)
+	(KChartHiloSubTypeChartPage)
+	(KChartPolarSubTypeChartPage):
+	Q3GroupBox -> QGroupBox
+
 2007-03-24  Inge Wallin  <inge@lysator.liu.se>
 
 	Qt3 -> Qt4: Remove Q3GroupBox from the Wizard
